# audio-transcriptor

./: .env.exemple  .gitignore  pyproject.toml  ui.py
